upgrade to angular 14

--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,7 @@
   "version": 1,
   "projects": {
     "app": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "application",
       "schematics": {
         "@nrwl/angular:component": {
@@ -42,13 +43,9 @@
                 "output": "assets/deployment"
               }
             ],
-            "styles": [
-              "apps/app/src/styles.scss"
-            ],
+            "styles": ["apps/app/src/styles.scss"],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "apps/app/src"
-              ]
+              "includePaths": ["apps/app/src"]
             },
             "scripts": [],
             "ngswConfigPath": "apps/app/src/ngsw-config.json",
@@ -127,9 +124,7 @@
             },
             "defaultConfiguration": "production"
           },
-          "outputs": [
-            "{options.outputPath}"
-          ]
+          "outputs": ["{options.outputPath}"]
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -162,19 +157,16 @@
             "scripts": [],
             "assets": [],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "apps/app/src"
-              ]
+              "includePaths": ["apps/app/src"]
             }
           },
-          "outputs": [
-            "coverage/apps/app"
-          ]
+          "outputs": ["coverage/apps/app"]
         }
       },
       "tags": []
     },
     "auth": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "library",
       "root": "libs/auth",
       "sourceRoot": "libs/auth/src",
@@ -187,9 +179,7 @@
             "tsConfig": "libs/auth/tsconfig.spec.json",
             "karmaConfig": "libs/auth/karma.conf.js"
           },
-          "outputs": [
-            "coverage/libs/auth"
-          ]
+          "outputs": ["coverage/libs/auth"]
         }
       },
       "schematics": {
@@ -201,6 +191,7 @@
       "tags": []
     },
     "common": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "library",
       "root": "libs/common",
       "sourceRoot": "libs/common/src",
@@ -213,9 +204,7 @@
             "tsConfig": "libs/common/tsconfig.spec.json",
             "karmaConfig": "libs/common/karma.conf.js"
           },
-          "outputs": [
-            "coverage/libs/common"
-          ]
+          "outputs": ["coverage/libs/common"]
         }
       },
       "schematics": {
@@ -227,6 +216,7 @@
       "tags": []
     },
     "components": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "library",
       "root": "libs/components",
       "sourceRoot": "libs/components/src",
@@ -239,9 +229,7 @@
             "tsConfig": "libs/components/tsconfig.spec.json",
             "karmaConfig": "libs/components/karma.conf.js"
           },
-          "outputs": [
-            "coverage/libs/components"
-          ]
+          "outputs": ["coverage/libs/components"]
         }
       },
       "schematics": {
@@ -253,6 +241,7 @@
       "tags": []
     },
     "core": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "library",
       "root": "libs/core",
       "sourceRoot": "libs/core/src",
@@ -265,9 +254,7 @@
             "tsConfig": "libs/core/tsconfig.spec.json",
             "karmaConfig": "libs/core/karma.conf.js"
           },
-          "outputs": [
-            "coverage/libs/core"
-          ]
+          "outputs": ["coverage/libs/core"]
         }
       },
       "schematics": {
@@ -279,6 +266,7 @@
       "tags": []
     },
     "desktop": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "application",
       "root": "apps/desktop",
       "sourceRoot": "apps/desktop/src",
@@ -286,9 +274,7 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/desktop",
             "index": "apps/desktop/src/index.html",
@@ -305,13 +291,9 @@
                 "output": "assets"
               }
             ],
-            "styles": [
-              "apps/desktop/src/styles.scss"
-            ],
+            "styles": ["apps/desktop/src/styles.scss"],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "apps/desktop/src"
-              ]
+              "includePaths": ["apps/desktop/src"]
             },
             "scripts": []
           },
@@ -410,17 +392,12 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": [
-              "apps/desktop/src/**/*.ts",
-              "apps/desktop/src/**/*.html"
-            ]
+            "lintFilePatterns": ["apps/desktop/src/**/*.ts", "apps/desktop/src/**/*.html"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/desktop"
-          ],
+          "outputs": ["coverage/apps/desktop"],
           "options": {
             "jestConfig": "apps/desktop/jest.config.js",
             "passWithNoTests": true
@@ -430,22 +407,19 @@
       "tags": []
     },
     "desktop-electron": {
+      "$schema": "../../../node_modules/nx/schemas/project-schema.json",
       "root": "apps/desktop/electron",
       "sourceRoot": "apps/desktop/electron/src",
       "projectType": "application",
       "architect": {
         "build": {
           "builder": "nx-electron:build",
-          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/desktop-electron",
             "main": "apps/desktop/electron/src/main.ts",
             "tsConfig": "apps/desktop/electron/tsconfig.app.json",
-            "assets": [
-              "apps/desktop/electron/src/assets"
-            ]
+            "assets": ["apps/desktop/electron/src/assets"]
           },
           "configurations": {
             "production": {
@@ -486,20 +460,14 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": [
-            "{options.outputFile}"
-          ],
+          "outputs": ["{options.outputFile}"],
           "options": {
-            "lintFilePatterns": [
-              "apps/desktop/electron/**/*.ts"
-            ]
+            "lintFilePatterns": ["apps/desktop/electron/**/*.ts"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/desktop/electron"
-          ],
+          "outputs": ["coverage/apps/desktop/electron"],
           "options": {
             "jestConfig": "apps/desktop/electron/jest.config.js",
             "passWithNoTests": true
@@ -508,6 +476,7 @@
       }
     },
     "manager": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "application",
       "schematics": {
         "@nrwl/angular:component": {
@@ -527,9 +496,7 @@
             "main": "apps/manager/src/main.ts",
             "polyfills": "apps/manager/src/polyfills.ts",
             "tsConfig": "apps/manager/tsconfig.app.json",
-            "allowedCommonJsDependencies": [
-              "lru-cache"
-            ],
+            "allowedCommonJsDependencies": ["lru-cache"],
             "budgets": [
               {
                 "type": "initial",
@@ -561,9 +528,7 @@
                 "output": "assets/deployment"
               }
             ],
-            "styles": [
-              "apps/manager/src/styles.scss"
-            ],
+            "styles": ["apps/manager/src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -632,9 +597,7 @@
             },
             "defaultConfiguration": "production"
           },
-          "outputs": [
-            "{options.outputPath}"
-          ]
+          "outputs": ["{options.outputPath}"]
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -667,14 +630,13 @@
             "scripts": [],
             "assets": []
           },
-          "outputs": [
-            "coverage/apps/manager"
-          ]
+          "outputs": ["coverage/apps/manager"]
         }
       },
       "tags": []
     },
     "pastanaga": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "library",
       "root": "libs/pastanaga",
       "sourceRoot": "libs/pastanaga/src",
@@ -687,9 +649,7 @@
             "tsConfig": "libs/pastanaga/tsconfig.spec.json",
             "karmaConfig": "libs/pastanaga/karma.conf.js"
           },
-          "outputs": [
-            "coverage/libs/pastanaga"
-          ]
+          "outputs": ["coverage/libs/pastanaga"]
         }
       },
       "schematics": {
@@ -701,6 +661,7 @@
       "tags": []
     },
     "sdk-core": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "root": "libs/sdk-core",
       "sourceRoot": "libs/sdk-core/src",
       "projectType": "library",
@@ -708,27 +669,19 @@
         "build": {
           "builder": "@nrwl/workspace:run-commands",
           "options": {
-            "commands": [
-              "yarn sdk-build"
-            ]
+            "commands": ["yarn sdk-build"]
           }
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": [
-              "libs/sdk-core/**/*.ts"
-            ]
+            "lintFilePatterns": ["libs/sdk-core/**/*.ts"]
           },
-          "outputs": [
-            "{options.outputFile}"
-          ]
+          "outputs": ["{options.outputFile}"]
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/sdk-core"
-          ],
+          "outputs": ["coverage/libs/sdk-core"],
           "options": {
             "jestConfig": "libs/sdk-core/jest.config.js",
             "passWithNoTests": true
@@ -738,6 +691,7 @@
       "tags": []
     },
     "sdk-demo": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "application",
       "root": "apps/sdk-demo",
       "sourceRoot": "apps/sdk-demo/src",
@@ -752,13 +706,8 @@
             "polyfills": "apps/sdk-demo/src/polyfills.ts",
             "tsConfig": "apps/sdk-demo/tsconfig.app.json",
             "aot": true,
-            "assets": [
-              "apps/sdk-demo/src/favicon.ico",
-              "apps/sdk-demo/src/assets"
-            ],
-            "styles": [
-              "apps/sdk-demo/src/styles.scss"
-            ],
+            "assets": ["apps/sdk-demo/src/favicon.ico", "apps/sdk-demo/src/assets"],
+            "styles": ["apps/sdk-demo/src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -823,9 +772,7 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/sdk-demo"
-          ],
+          "outputs": ["coverage/apps/sdk-demo"],
           "options": {
             "jestConfig": "apps/sdk-demo/jest.config.js",
             "passWithNoTests": true
@@ -835,6 +782,7 @@
       "tags": []
     },
     "search-widget": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "root": "libs/search-widget",
       "sourceRoot": "libs/search-widget/src",
       "projectType": "library",
@@ -842,9 +790,7 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": [
-              "libs/search-widget/**/*.{ts,svelte,spec.ts}"
-            ]
+            "lintFilePatterns": ["libs/search-widget/**/*.{ts,svelte,spec.ts}"]
           }
         },
         "check": {
@@ -867,9 +813,7 @@
         },
         "build-original": {
           "builder": "@nxext/svelte:build",
-          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/libs/search-widget",
             "entryFile": "libs/search-widget/src/index.ts",
@@ -891,9 +835,7 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/search-widget"
-          ],
+          "outputs": ["coverage/libs/search-widget"],
           "options": {
             "jestConfig": "libs/search-widget/jest.config.js",
             "passWithNoTests": true
@@ -902,15 +844,14 @@
       }
     },
     "search-widget-demo": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "root": "apps/search-widget-demo",
       "sourceRoot": "apps/search-widget-demo/src",
       "projectType": "application",
       "architect": {
         "build": {
           "builder": "@nxext/vite:build",
-          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/search-widget-demo",
             "assets": [
@@ -935,9 +876,7 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": [
-              "apps/search-widget-demo/**/*.{ts,svelte,spec.ts}"
-            ]
+            "lintFilePatterns": ["apps/search-widget-demo/**/*.{ts,svelte,spec.ts}"]
           }
         },
         "check": {
@@ -949,9 +888,7 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/search-widget-demo"
-          ],
+          "outputs": ["coverage/apps/search-widget-demo"],
           "options": {
             "jestConfig": "apps/search-widget-demo/jest.config.js",
             "passWithNoTests": true
@@ -960,6 +897,7 @@
       }
     },
     "sistema": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "library",
       "root": "libs/sistema",
       "sourceRoot": "libs/sistema/src",
@@ -967,9 +905,7 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/libs/sistema"
-          ],
+          "outputs": ["coverage/libs/sistema"],
           "options": {
             "jestConfig": "libs/sistema/jest.config.js",
             "passWithNoTests": true
@@ -978,16 +914,14 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": [
-              "libs/sistema/src/**/*.ts",
-              "libs/sistema/src/**/*.html"
-            ]
+            "lintFilePatterns": ["libs/sistema/src/**/*.ts", "libs/sistema/src/**/*.html"]
           }
         }
       },
       "tags": []
     },
     "sistema-demo": {
+      "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "application",
       "root": "apps/sistema-demo",
       "sourceRoot": "apps/sistema-demo/src",
@@ -995,9 +929,7 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/sistema-demo",
             "index": "apps/sistema-demo/src/index.html",
@@ -1014,14 +946,10 @@
                 "output": "/assets/"
               }
             ],
-            "styles": [
-              "apps/sistema-demo/src/styles.scss"
-            ],
+            "styles": ["apps/sistema-demo/src/styles.scss"],
             "scripts": [],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "apps/sistema-demo/src"
-              ]
+              "includePaths": ["apps/sistema-demo/src"]
             }
           },
           "configurations": {
@@ -1078,17 +1006,12 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": [
-              "apps/sistema-demo/src/**/*.ts",
-              "apps/sistema-demo/src/**/*.html"
-            ]
+            "lintFilePatterns": ["apps/sistema-demo/src/**/*.ts", "apps/sistema-demo/src/**/*.html"]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/sistema-demo"
-          ],
+          "outputs": ["coverage/apps/sistema-demo"],
           "options": {
             "jestConfig": "apps/sistema-demo/jest.config.js",
             "passWithNoTests": true
