--- a/apps/sistema-demo/tsconfig.app.json
+++ b/apps/sistema-demo/tsconfig.app.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "types": [],
-    "target": "ES2017",
+    "target": "es2020",
     "resolveJsonModule": true
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
