--- a/package.json
+++ b/package.json
@@ -43,22 +43,22 @@
     "sdk-build:win32": "echo 'NO WIN32 BUILD'",
     "sdk-build:default": "rimraf ./dist/sdk-core && cd ./libs/sdk-core && rollup -c && cp package.json README.md ../../dist/sdk-core && cd - && cp ./LICENSE.md dist/sdk-core",
     "widget:build": "ng build widget --prod --single-bundle --output-hashing none",
-    "postinstall": "ngcc --properties es2015 browser module main"
+    "postinstall": "ngcc --properties es2020 browser module main"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.3.11",
-    "@angular/cdk": "13.3.9",
-    "@angular/common": "13.3.11",
-    "@angular/compiler": "13.3.11",
-    "@angular/core": "13.3.11",
+    "@angular/animations": "14.0.3",
+    "@angular/cdk": "14.0.3",
+    "@angular/common": "14.0.3",
+    "@angular/compiler": "14.0.3",
+    "@angular/core": "14.0.3",
     "@angular/flex-layout": "^13.0.0-beta.37",
-    "@angular/forms": "13.3.11",
-    "@angular/material": "13.3.9",
-    "@angular/platform-browser": "13.3.11",
-    "@angular/platform-browser-dynamic": "13.3.11",
-    "@angular/router": "13.3.11",
-    "@angular/service-worker": "13.3.11",
+    "@angular/forms": "14.0.3",
+    "@angular/material": "14.0.3",
+    "@angular/platform-browser": "14.0.3",
+    "@angular/platform-browser-dynamic": "14.0.3",
+    "@angular/router": "14.0.3",
+    "@angular/service-worker": "14.0.3",
     "@angular/youtube-player": "^11.2.11",
     "@ng-web-apis/common": "^2.0.0",
     "@ngx-translate/core": "^14.0.0",
@@ -99,27 +99,27 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.3.8",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
+    "@angular-devkit/build-angular": "14.0.3",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
     "@angular-eslint/schematics": "13.2.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "13.3.8",
-    "@angular/compiler-cli": "13.3.11",
-    "@angular/language-service": "13.3.11",
+    "@angular-eslint/template-parser": "13.2.1",
+    "@angular/cli": "~14.0.0",
+    "@angular/compiler-cli": "14.0.3",
+    "@angular/language-service": "14.0.3",
     "@biesbjerg/ngx-translate-extract": "^7.0.2",
-    "@nrwl/angular": "14.1.9",
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "14.1.9",
-    "@nrwl/jest": "14.1.9",
-    "@nrwl/js": "14.1.9",
-    "@nrwl/linter": "14.1.9",
-    "@nrwl/node": "14.1.9",
-    "@nrwl/workspace": "14.1.9",
+    "@nrwl/angular": "14.3.6",
+    "@nrwl/cli": "14.3.6",
+    "@nrwl/eslint-plugin-nx": "14.3.6",
+    "@nrwl/jest": "14.3.6",
+    "@nrwl/js": "14.3.6",
+    "@nrwl/linter": "14.3.6",
+    "@nrwl/node": "14.3.6",
+    "@nrwl/workspace": "14.3.6",
     "@nxext/svelte": "^13.1.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@schematics/angular": "^13.3.5",
+    "@schematics/angular": "14.0.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.32",
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.1",
@@ -128,7 +128,7 @@
     "@types/gapi": "^0.0.42",
     "@types/gapi.auth2": "^0.0.56",
     "@types/gapi.client.drive": "^3.0.13",
-    "@types/jasmine": "3.6.11",
+    "@types/jasmine": "4.0.3",
     "@types/jest": "27.4.1",
     "@types/jexl": "^2.2.0",
     "@types/latinize": "^0.2.15",
@@ -140,38 +140,38 @@
     "@types/uuid": "^8.3.0",
     "@types/z-schema": "^3.24.0",
     "@types/zone.js": "^0.5.12",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
+    "@typescript-eslint/eslint-plugin": "5.24.0",
+    "@typescript-eslint/parser": "5.24.0",
     "codelyzer": "6.0.2",
     "crypto-browserify": "^3.12.0",
     "dotenv": "10.0.0",
     "electron": "^17.0.0",
     "electron-builder": "^23.0.2",
     "electron-notarize": "^1.2.1",
-    "eslint": "8.12.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "exitzero": "^1.0.1",
-    "jasmine-core": "3.10.1",
-    "jasmine-spec-reporter": "5.0.2",
+    "jasmine-core": "4.1.1",
+    "jasmine-spec-reporter": "7.0.0",
     "jest": "27.5.1",
-    "jest-preset-angular": "11.1.1",
+    "jest-preset-angular": "11.1.2",
     "jsrsasign": "^10.1.0",
     "karma": "6.3.20",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
+    "karma-jasmine": "5.0.1",
     "karma-jasmine-html-reporter": "1.7.0",
-    "ng-packagr": "13.3.1",
+    "ng-packagr": "14.0.2",
     "ngx-build-plus": "11.0.0",
-    "nx": "14.1.9",
+    "nx": "14.3.6",
     "nx-electron": "^13.0.0",
     "postcss": "^8.3.9",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "7.5.0",
     "postcss-url": "10.1.3",
-    "prettier": "2.5.1",
+    "prettier": "2.7.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.66.0",
     "rollup-plugin-dts": "^4.1.0",
@@ -183,10 +183,9 @@
     "svelte-jester": "^1.3.2",
     "svelte-preprocess": "^4.9.8",
     "ts-jest": "27.1.4",
-    "ts-node": "9.1.1",
+    "ts-node": "10.8.1",
     "tslint": "6.1.3",
-    "typescript": "4.6.4",
+    "typescript": "4.7.4",
     "vite": "2.7.13"
   }
 }
-
