--- a/angular.json
+++ b/angular.json
@@ -198,13 +198,12 @@
       "prefix": "stf",
       "architect": {
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/common"],
           "options": {
-            "main": "libs/common/src/test.ts",
-            "tsConfig": "libs/common/tsconfig.spec.json",
-            "karmaConfig": "libs/common/karma.conf.js"
-          },
-          "outputs": ["coverage/libs/common"]
+            "jestConfig": "libs/common/jest.config.js",
+            "passWithNoTests": true
+          }
         }
       },
       "schematics": {
