--- a/angular.json
+++ b/angular.json
@@ -641,13 +641,12 @@
       "prefix": "stf",
       "architect": {
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/pastanaga"],
           "options": {
-            "main": "libs/pastanaga/src/test.ts",
-            "tsConfig": "libs/pastanaga/tsconfig.spec.json",
-            "karmaConfig": "libs/pastanaga/karma.conf.js"
-          },
-          "outputs": ["coverage/libs/pastanaga"]
+            "jestConfig": "libs/pastanaga/jest.config.js",
+            "passWithNoTests": true
+          }
         }
       },
       "schematics": {
