--- a/apps/app/tsconfig.editor.json
+++ b/apps/app/tsconfig.editor.json
@@ -2,9 +2,9 @@
   "extends": "./tsconfig.json",
   "include": ["**/*.ts"],
   "compilerOptions": {
-    "types": ["jasmine", "node"],
+    "types": ["jest", "node"]
   },
   "angularCompilerOptions": {
-    "strictTemplates": true,
-  },
+    "strictTemplates": true
+  }
 }
