--- a/angular.json
+++ b/angular.json
@@ -610,17 +610,12 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/manager"],
           "options": {
-            "main": "apps/manager/src/test.ts",
-            "tsConfig": "apps/manager/tsconfig.spec.json",
-            "karmaConfig": "apps/manager/karma.conf.js",
-            "polyfills": "apps/manager/src/polyfills.ts",
-            "styles": [],
-            "scripts": [],
-            "assets": []
-          },
-          "outputs": ["coverage/apps/manager"]
+            "jestConfig": "apps/manager/jest.config.js",
+            "passWithNoTests": true
+          }
         }
       },
       "tags": []
