--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "test:ci": "ng test --browsers=ChromeHeadless --watch=false",
+    "test": "nx run-many --all --target=test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
@@ -59,14 +58,12 @@
     "@angular/platform-browser-dynamic": "14.0.3",
     "@angular/router": "14.0.3",
     "@angular/service-worker": "14.0.3",
-    "@angular/youtube-player": "^11.2.11",
     "@ng-web-apis/common": "^2.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@nxext/vite": "^13.2.1",
     "@sentry/angular": "^7.2.0",
     "@sentry/tracing": "^7.2.0",
-    "@swimlane/ngx-dnd": "^9.0.0",
     "angular-svg-icon": "^13.0.0",
     "child_process": "^1.0.2",
     "core-js": "^3.6.4",
@@ -78,16 +75,11 @@
     "latinize": "^0.5.0",
     "mrs-developer": "^1.7.1",
     "ngx-captcha": "^9.0.1",
-    "ngx-quill": "^13.3.1",
     "ngx-ui-tour-core": "^7.0.2",
     "ngx-ui-tour-md-menu": "^7.0.2",
     "node-machine-id": "^1.1.12",
     "perfect-scrollbar": "^1.5.0",
     "posthog-js": "^1.17.9",
-    "quill": "^1.3.7",
-    "quill-cursors": "^3.0.0",
-    "quill-image-resize": "^3.0.9",
-    "quill-mention": "^2.2.5",
     "run-script-os": "^1.1.6",
     "rxjs": "7.5.2",
     "spark-md5": "^3.0.1",
@@ -135,13 +127,13 @@
     "@types/lru-cache": "^5.1.0",
     "@types/node": "^15.6.1",
     "@types/perfect-scrollbar": "^1.3.0",
-    "@types/quill": "^2.0.4",
     "@types/spark-md5": "^3.0.2",
     "@types/uuid": "^8.3.0",
     "@types/z-schema": "^3.24.0",
     "@types/zone.js": "^0.5.12",
     "@typescript-eslint/eslint-plugin": "5.24.0",
     "@typescript-eslint/parser": "5.24.0",
+    "ajv-formats": "^2.1.1",
     "codelyzer": "6.0.2",
     "crypto-browserify": "^3.12.0",
     "dotenv": "10.0.0",
@@ -157,12 +149,6 @@
     "jest": "27.5.1",
     "jest-preset-angular": "11.1.2",
     "jsrsasign": "^10.1.0",
-    "karma": "6.3.20",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "5.0.1",
-    "karma-jasmine-html-reporter": "1.7.0",
     "ng-packagr": "14.0.2",
     "ngx-build-plus": "11.0.0",
     "nx": "14.3.6",
