--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@angular/common": "14.0.3",
     "@angular/compiler": "14.0.3",
     "@angular/core": "14.0.3",
-    "@angular/flex-layout": "^13.0.0-beta.37",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "14.0.3",
     "@angular/material": "14.0.3",
     "@angular/platform-browser": "14.0.3",
@@ -92,10 +92,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "14.0.3",
-    "@angular-eslint/eslint-plugin": "13.2.1",
-    "@angular-eslint/eslint-plugin-template": "13.2.1",
-    "@angular-eslint/schematics": "13.2.1",
-    "@angular-eslint/template-parser": "13.2.1",
+    "@angular-eslint/eslint-plugin": "^14.0.0",
+    "@angular-eslint/eslint-plugin-template": "^14.0.0",
+    "@angular-eslint/schematics": "^14.0.0",
+    "@angular-eslint/template-parser": "^14.0.0",
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "14.0.3",
     "@angular/language-service": "14.0.3",
