--- a/angular.json
+++ b/angular.json
@@ -1,10 +1,10 @@
 {
-  "version": 1,
+  "version": 2,
   "projects": {
     "app": {
       "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "application",
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -13,9 +13,9 @@
       "root": "apps/app",
       "sourceRoot": "apps/app/src",
       "prefix": "app",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "executor": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/apps/app",
             "index": "apps/app/src/index.html",
@@ -127,7 +127,7 @@
           "outputs": ["{options.outputPath}"]
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "executor": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "app:build"
           },
@@ -141,13 +141,13 @@
           }
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "executor": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "app:build"
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/app"],
           "options": {
             "jestConfig": "apps/app/jest.config.js",
@@ -163,9 +163,9 @@
       "root": "libs/auth",
       "sourceRoot": "libs/auth/src",
       "prefix": "stf",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/auth"],
           "options": {
             "jestConfig": "libs/auth/jest.config.js",
@@ -173,7 +173,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -187,9 +187,9 @@
       "root": "libs/common",
       "sourceRoot": "libs/common/src",
       "prefix": "stf",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/common"],
           "options": {
             "jestConfig": "libs/common/jest.config.js",
@@ -197,7 +197,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -211,9 +211,9 @@
       "root": "libs/components",
       "sourceRoot": "libs/components/src",
       "prefix": "ncom",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/components"],
           "options": {
             "jestConfig": "libs/components/jest.config.js",
@@ -221,7 +221,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -235,9 +235,9 @@
       "root": "libs/core",
       "sourceRoot": "libs/core/src",
       "prefix": "stf",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/core"],
           "options": {
             "jestConfig": "libs/core/jest.config.js",
@@ -245,7 +245,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -259,9 +259,9 @@
       "root": "apps/desktop",
       "sourceRoot": "apps/desktop/src",
       "prefix": "da",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "executor": "@angular-devkit/build-angular:browser",
           "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/desktop",
@@ -357,7 +357,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "executor": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
               "browserTarget": "desktop:build:production"
@@ -372,19 +372,19 @@
           }
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "executor": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "desktop:build"
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["apps/desktop/src/**/*.ts", "apps/desktop/src/**/*.html"]
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/desktop"],
           "options": {
             "jestConfig": "apps/desktop/jest.config.js",
@@ -399,9 +399,9 @@
       "root": "apps/desktop/electron",
       "sourceRoot": "apps/desktop/electron/src",
       "projectType": "application",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "nx-electron:build",
+          "executor": "nx-electron:build",
           "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/desktop-electron",
@@ -424,13 +424,13 @@
           }
         },
         "serve": {
-          "builder": "nx-electron:execute",
+          "executor": "nx-electron:execute",
           "options": {
             "buildTarget": "desktop-electron:build"
           }
         },
         "package": {
-          "builder": "nx-electron:package",
+          "executor": "nx-electron:package",
           "options": {
             "name": "desktop-electron",
             "frontendProject": "desktop",
@@ -439,7 +439,7 @@
           }
         },
         "make": {
-          "builder": "nx-electron:make",
+          "executor": "nx-electron:make",
           "options": {
             "name": "desktop-electron",
             "frontendProject": "desktop",
@@ -447,14 +447,14 @@
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "outputs": ["{options.outputFile}"],
           "options": {
             "lintFilePatterns": ["apps/desktop/electron/**/*.ts"]
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/desktop/electron"],
           "options": {
             "jestConfig": "apps/desktop/electron/jest.config.js",
@@ -466,7 +466,7 @@
     "manager": {
       "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "application",
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -475,9 +475,9 @@
       "root": "apps/manager",
       "sourceRoot": "apps/manager/src",
       "prefix": "app",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "executor": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/apps/manager",
             "index": "apps/manager/src/index.html",
@@ -588,7 +588,7 @@
           "outputs": ["{options.outputPath}"]
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "executor": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "manager:build"
           },
@@ -602,13 +602,13 @@
           }
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "executor": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "manager:build"
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/manager"],
           "options": {
             "jestConfig": "apps/manager/jest.config.js",
@@ -624,9 +624,9 @@
       "root": "libs/pastanaga",
       "sourceRoot": "libs/pastanaga/src",
       "prefix": "stf",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/pastanaga"],
           "options": {
             "jestConfig": "libs/pastanaga/jest.config.js",
@@ -634,7 +634,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -647,22 +647,22 @@
       "root": "libs/sdk-core",
       "sourceRoot": "libs/sdk-core/src",
       "projectType": "library",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@nrwl/workspace:run-commands",
+          "executor": "@nrwl/workspace:run-commands",
           "options": {
             "commands": ["yarn sdk-build"]
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["libs/sdk-core/**/*.ts"]
           },
           "outputs": ["{options.outputFile}"]
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/sdk-core"],
           "options": {
             "jestConfig": "libs/sdk-core/jest.config.js",
@@ -678,9 +678,9 @@
       "root": "apps/sdk-demo",
       "sourceRoot": "apps/sdk-demo/src",
       "prefix": "sdk-demo",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "executor": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/apps/sdk-demo",
             "index": "apps/sdk-demo/src/index.html",
@@ -732,7 +732,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "executor": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "sdk-demo:build"
           },
@@ -747,13 +747,13 @@
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "executor": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "sdk-demo:build"
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/sdk-demo"],
           "options": {
             "jestConfig": "apps/sdk-demo/jest.config.js",
@@ -768,22 +768,22 @@
       "root": "libs/search-widget",
       "sourceRoot": "libs/search-widget/src",
       "projectType": "library",
-      "architect": {
+      "targets": {
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["libs/search-widget/**/*.{ts,svelte,spec.ts}"]
           }
         },
         "check": {
-          "builder": "@nrwl/workspace:run-commands",
+          "executor": "@nrwl/workspace:run-commands",
           "options": {
             "command": "svelte-check",
             "cwd": "libs/search-widget"
           }
         },
         "build": {
-          "builder": "@nrwl/workspace:run-commands",
+          "executor": "@nrwl/workspace:run-commands",
           "options": {
             "commands": [
               "yarn vite build -c=libs/search-widget/vite.config.js && cp -r libs/search-widget/public/i18n dist/libs/search-widget"
@@ -794,7 +794,7 @@
           }
         },
         "build-original": {
-          "builder": "@nxext/svelte:build",
+          "executor": "@nxext/svelte:build",
           "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/libs/search-widget",
@@ -816,7 +816,7 @@
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/search-widget"],
           "options": {
             "jestConfig": "libs/search-widget/jest.config.js",
@@ -830,9 +830,9 @@
       "root": "apps/search-widget-demo",
       "sourceRoot": "apps/search-widget-demo/src",
       "projectType": "application",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@nxext/vite:build",
+          "executor": "@nxext/vite:build",
           "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/search-widget-demo",
@@ -850,26 +850,26 @@
           }
         },
         "serve": {
-          "builder": "@nxext/vite:dev",
+          "executor": "@nxext/vite:dev",
           "options": {
             "outputPath": "dist/apps/search-widget-demo"
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["apps/search-widget-demo/**/*.{ts,svelte,spec.ts}"]
           }
         },
         "check": {
-          "builder": "@nrwl/workspace:run-commands",
+          "executor": "@nrwl/workspace:run-commands",
           "options": {
             "command": "svelte-check",
             "cwd": "apps/search-widget-demo"
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/search-widget-demo"],
           "options": {
             "jestConfig": "apps/search-widget-demo/jest.config.js",
@@ -884,9 +884,9 @@
       "root": "libs/sistema",
       "sourceRoot": "libs/sistema/src",
       "prefix": "nsi",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/sistema"],
           "options": {
             "jestConfig": "libs/sistema/jest.config.js",
@@ -894,7 +894,7 @@
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["libs/sistema/src/**/*.ts", "libs/sistema/src/**/*.html"]
           }
@@ -908,9 +908,9 @@
       "root": "apps/sistema-demo",
       "sourceRoot": "apps/sistema-demo/src",
       "prefix": "nsd",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "executor": "@angular-devkit/build-angular:browser",
           "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/sistema-demo",
@@ -969,7 +969,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "executor": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
               "browserTarget": "sistema-demo:build:production"
@@ -981,19 +981,19 @@
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "executor": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "sistema-demo:build"
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["apps/sistema-demo/src/**/*.ts", "apps/sistema-demo/src/**/*.html"]
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/sistema-demo"],
           "options": {
             "jestConfig": "apps/sistema-demo/jest.config.js",
@@ -1001,7 +1001,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "inlineStyle": true,
           "style": "scss",
