--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "workspace-generator": "nx workspace-generator",
     "sdk-build": "run-script-os",
     "sdk-build:win32": "echo 'NO WIN32 BUILD'",
-    "sdk-build:default": "rimraf ./dist/sdk-core && cd ./libs/sdk-core && rollup -c && cp package.json README.md ../../dist/sdk-core && cd - && cp ./LICENSE.md dist/sdk-core",
+    "sdk-build:default": "rimraf ./dist/sdk-core && cd ./libs/sdk-core && rollup -c && cd -",
+    "postsdk-build:default": "yarn sdk-build-node",
+    "sdk-build-node": "rimraf ./dist/sdk-core-node && cd ./libs/sdk-core/node && rollup -c && cd -",
     "widget:build": "ng build widget --prod --single-bundle --output-hashing none",
     "postinstall": "ngcc --properties es2020 browser module main"
   },
@@ -62,6 +64,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@nxext/vite": "^13.2.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@sentry/angular": "^7.2.0",
     "@sentry/tracing": "^7.2.0",
     "angular-svg-icon": "^13.0.0",
@@ -109,7 +112,7 @@
     "@nrwl/node": "14.3.6",
     "@nrwl/workspace": "14.3.6",
     "@nxext/svelte": "^13.1.3",
-    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-typescript": "^8.3.0",
     "@schematics/angular": "14.0.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.32",
@@ -160,7 +163,9 @@
     "prettier": "2.7.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.66.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^4.1.0",
+    "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
