--- a/angular.json
+++ b/angular.json
@@ -936,6 +936,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/frontend/",
               "budgets": [
                 {
                   "type": "initial",
