--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "update": "nx migrate latest",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
+    "missdev": "npx missdev --output=../libs --https --default-to-master",
     "i18n-app:init": "ngx-translate-extract --input ./apps/app/src ./libs/**/src --output ./apps/app/src/assets/i18n/template.json --key-as-default-value --replace --format json",
     "i18n-app:extract": "ngx-translate-extract --input ./apps/app/src ./libs/**/src --output ./apps/app/src/assets/i18n/{en,ca,es}.json --clean --format json",
     "i18n-desktop:init": "ngx-translate-extract --input ./apps/desktop/src ./libs/**/src --output ./apps/desktop/src/assets/i18n/template.json --key-as-default-value --replace --format json",
