test workflow without --prefer-offline option

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
           cache: 'yarn'
       - name: Install project dependencies
         run: |-
-          yarn --prefer-offline
+          yarn
           yarn missdev
       - name: Unit tests
         run: npx nx affected --target=test --parallel=3 --exclude=sdk-demo,search-widget-demo,auth,core,sistema-demo
