--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -30,7 +30,7 @@
       "@flaps/components/resource": ["libs/components/resource/index.ts"],
       "@flaps/core": ["libs/core/src/index.ts"],
       "@flaps/pastanaga": ["libs/pastanaga/src/index.ts"],
-      "@guillotinaweb/pastanaga-angular": ["src/../libs/pastanaga-angular/projects/pastanaga-angular/src"],
+      "@guillotinaweb/pastanaga-angular": ["libs/pastanaga-angular/projects/pastanaga-angular/src"],
       "@nuclia/core": ["libs/sdk-core/src/index.ts"],
       "@nuclia/sistema": ["libs/sistema/src/index.ts"],
       "@nuclia/widget": ["libs/search-widget/src/index.ts"]
