--- a/angular.json
+++ b/angular.json
@@ -41,6 +41,11 @@
                 "glob": "**/*",
                 "input": "apps/app/src/environments_config/local",
                 "output": "assets/deployment"
+              },
+              {
+                "glob": "**/*",
+                "input": "libs/sistema/assets",
+                "output": "assets"
               }
             ],
             "styles": ["apps/app/src/styles.scss"],
@@ -276,6 +281,11 @@
               {
                 "glob": "**/*",
                 "input": "libs/pastanaga/src/assets",
+                "output": "assets"
+              },
+              {
+                "glob": "**/*",
+                "input": "libs/sistema/assets",
                 "output": "assets"
               }
             ],
