--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,73 +1,44 @@
 {
-    "compileOnSave": false,
-    "compilerOptions": {
-        "rootDir": ".",
-        "sourceMap": true,
-        "declaration": false,
-        "moduleResolution": "node",
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "esModuleInterop": true,
-        "importHelpers": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "es2015",
-        "module": "esnext",
-        "typeRoots": [
-            "node_modules/@types"
-        ],
-        "lib": [
-            "es2017",
-            "dom",
-            "esnext.asynciterable"
-        ],
-        "skipLibCheck": true,
-        "skipDefaultLibCheck": true,
-        "baseUrl": ".",
-        "strict": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noFallthroughCasesInSwitch": true,
-        "strictNullChecks": true,
-        "paths": {
-            "@flaps/auth": [
-                "libs/auth/src/index.ts"
-            ],
-            "@flaps/common": [
-                "libs/common/src/index.ts"
-            ],
-            "@flaps/components": [
-                "libs/components/src/index.ts"
-            ],
-            "@flaps/components/resource": [
-                "libs/components/resource/index.ts"
-            ],
-            "@flaps/core": [
-                "libs/core/src/index.ts"
-            ],
-            "@flaps/pastanaga": [
-                "libs/pastanaga/src/index.ts"
-            ],
-            "@guillotinaweb/pastanaga-angular": [
-                "libs/pastanaga-angular/projects/pastanaga-angular/src"
-            ],
-            "@nuclia/core": [
-                "libs/sdk-core/src/index.ts"
-            ],
-            "@nuclia/sistema": [
-                "libs/sistema/src/index.ts"
-            ],
-            "@nuclia/widget": [
-                "libs/search-widget/src/index.ts"
-            ]
-        }
-    },
-    "angularCompilerOptions": {
-        "strictTemplates": false,
-        "strictInjectionParameters": true
-    },
-    "exclude": [
-        "node_modules",
-        "tmp"
-    ]
+  "compileOnSave": false,
+  "compilerOptions": {
+    "rootDir": ".",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "importHelpers": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es2015",
+    "module": "esnext",
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom", "esnext.asynciterable"],
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
+    "baseUrl": ".",
+    "strict": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noFallthroughCasesInSwitch": true,
+    "strictNullChecks": true,
+    "paths": {
+      "@flaps/auth": ["libs/auth/src/index.ts"],
+      "@flaps/common": ["libs/common/src/index.ts"],
+      "@flaps/components": ["libs/components/src/index.ts"],
+      "@flaps/components/resource": ["libs/components/resource/index.ts"],
+      "@flaps/core": ["libs/core/src/index.ts"],
+      "@flaps/pastanaga": ["libs/pastanaga/src/index.ts"],
+      "@guillotinaweb/pastanaga-angular": ["libs/pastanaga-angular/projects/pastanaga-angular/src"],
+      "@nuclia/core": ["libs/sdk-core/src/index.ts"],
+      "@nuclia/sistema": ["libs/sistema/src/index.ts"],
+      "@nuclia/widget": ["libs/search-widget/src/index.ts"]
+    }
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": false,
+    "strictInjectionParameters": true
+  },
+  "exclude": ["node_modules", "tmp"]
 }
