Allow to load JSON as module
+ update README documenting how to run desktop app

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,6 +23,7 @@
     "noImplicitThis": true,
     "noFallthroughCasesInSwitch": true,
     "strictNullChecks": true,
+    "resolveJsonModule": true,
     "paths": {
       "@flaps/common": ["libs/common/src/index.ts"],
       "@flaps/components": ["libs/components/src/index.ts"],
