Use Sistema toasts in dashboard app

--- a/angular.json
+++ b/angular.json
@@ -95,6 +95,11 @@
                   "glob": "**/*",
                   "input": "apps/app/src/environments_config/production",
                   "output": "assets/deployment"
+                },
+                {
+                  "glob": "**/*",
+                  "input": "libs/sistema/assets",
+                  "output": "assets"
                 }
               ]
             },
@@ -124,6 +129,11 @@
                   "glob": "**/*",
                   "input": "apps/app/src/environments_config/local-stage",
                   "output": "assets/deployment"
+                },
+                {
+                  "glob": "**/*",
+                  "input": "libs/sistema/assets",
+                  "output": "assets"
                 }
               ]
             },
