Add desktop environment to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ node_modules
 environment.dev.ts
 environment.ts
 apps/**/local-stage/*.json
+apps/desktop/src/environments/environment.ts
 
 # IDE - VSCode
 .vscode
