Update desktop prefix to be nde
Follow the prefix convention: n for nuclia followed by the first two letters of the app name

--- a/angular.json
+++ b/angular.json
@@ -249,7 +249,7 @@
       "projectType": "application",
       "root": "apps/desktop",
       "sourceRoot": "apps/desktop/src",
-      "prefix": "da",
+      "prefix": "nde",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
