--- a/apps/desktop/.eslintrc.json
+++ b/apps/desktop/.eslintrc.json
@@ -10,7 +10,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "dtp",
+            "prefix": "nde",
             "style": "camelCase"
           }
         ],
@@ -18,7 +18,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "dtp",
+            "prefix": "nde",
             "style": "kebab-case"
           }
         ]
