Matpellerin/sc 1802/pastanaga2 in desktop (#122)
* Allow to load JSON as module

+ update README documenting how to run desktop app

* Add desktop environment to .gitignore

* Update desktop prefix to be nde

Follow the prefix convention: n for nuclia followed by the first two letters of the app name

* Fix ESlint error: event emitter should not start by "on"

* Pastanaga 2 + sistema integration

* Remove stf variables

* Replace stf components by pastanaga ones

except for the progress as we don't have progress in pastanaga yet

* Revert "Add desktop environment to .gitignore"

This reverts commit 9440d7d2aeed42e3f1539c29d294f4dfeb435705.

* No need for -c local-stage serving desktop app

--- a/angular.json
+++ b/angular.json
@@ -249,7 +249,7 @@
       "projectType": "application",
       "root": "apps/desktop",
       "sourceRoot": "apps/desktop/src",
-      "prefix": "da",
+      "prefix": "nde",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -314,6 +314,11 @@
                   "glob": "**/*",
                   "input": "libs/sdk-core/protobuf/nucliadb_protos",
                   "output": "assets/nucliadb_protos"
+                },
+                {
+                  "glob": "**/*",
+                  "input": "libs/sistema/assets",
+                  "output": "assets"
                 }
               ]
             },
@@ -338,6 +343,11 @@
                   "glob": "**/*",
                   "input": "libs/sdk-core/protobuf/nucliadb_protos",
                   "output": "assets/nucliadb_protos"
+                },
+                {
+                  "glob": "**/*",
+                  "input": "libs/sistema/assets",
+                  "output": "assets"
                 }
               ]
             },
@@ -366,6 +376,11 @@
                   "glob": "**/*",
                   "input": "libs/sdk-core/protobuf/nucliadb_protos",
                   "output": "assets/nucliadb_protos"
+                },
+                {
+                  "glob": "**/*",
+                  "input": "libs/sistema/assets",
+                  "output": "assets"
                 }
               ]
             }
