--- a/charts/manager/templates/manager.deploy.yaml
+++ b/charts/manager/templates/manager.deploy.yaml
@@ -28,6 +28,11 @@ spec:
     spec:
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
+      affinity:
+{{ toYaml .Values.affinity | indent 8 }}
+      tolerations:
+{{ toYaml .Values.tolerations | indent 8 }}
+      dnsPolicy: ClusterFirst
       containers:
       - name: {{ .Release.Name }}
         image: "{{ .Values.containerRegistry }}/{{ .Values.image }}"
